adjusted more styling on mobile and fixed row and column alignment; got next videos section looking nice on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,10 @@
     line-height:1.25rem;
     color:$primary-color-3;
     margin:1rem;
+    padding-top:2rem;
     font-weight:700;
+    border-top:0.063rem solid $secondary-color-3;
+
 
     @include tablet{
         margin:1.5rem;
