--- a/src/components/CurrentVideo/CurrentVideo.scss
+++ b/src/components/CurrentVideo/CurrentVideo.scss
@@ -50,10 +50,14 @@ line-height: 2.75rem;
 &__rowcontainer{
     display:flex;
     flex-direction: row;
+    border-bottom: 0.063rem solid $secondary-color-3;
+    border-top:0.063rem solid $secondary-color-3;
 
     @include desktop{
     display:flex;
-    flex-direction: row;}
+    flex-direction: row;
+    border-top:none;
+}
 }
 &__columncontainer{
     display:flex;
@@ -67,7 +71,7 @@ line-height: 2.75rem;
 
     @include desktop{
         display:flex;
-        flex-direction:column;
+        flex-direction:row;
     }
 }
 
@@ -81,6 +85,10 @@ color:$primary-color-1;
 @include tablet{
 font-size: 0.875rem; 
 line-height: 1.375rem;
+}
+
+@include desktop{
+    width:6rem;
 }
 
 }
@@ -101,11 +109,12 @@ line-height: 1.375rem;
 
 &__social{
 display: flex;
-flex-direction: row;
-margin-left:10rem;
+flex-direction: column;
+margin-left:3rem;
 
 @include desktop{
-    margin-left:6rem;
+    margin-left:0rem;
+    flex-direction: row;
     
 }
 }
@@ -121,7 +130,8 @@ background-image: url(../../assets/images/view.svg);
 background-repeat: no-repeat;
 background-size:1.5rem;
 background-position: 0rem 1rem;
-margin:1rem;
+margin:0.5rem;
+height:2.2rem;
 
 @include tablet{
 font-size: 0.875rem; 
@@ -130,6 +140,7 @@ line-height: 1.375rem;
 
 @include desktop{
     margin-left:30rem;
+    background-size:1.2rem;
 }
 
 }
@@ -145,11 +156,17 @@ background-image: url(../../assets/images/favorite.svg);
 background-repeat: no-repeat;
 background-size:1.5rem;
 background-position: 0rem 1rem;
-margin:1rem;
+margin:0.5rem;
+height:2.2rem;
 
 @include tablet{
 font-size: 0.875rem; 
 line-height: 1.375rem;
+}
+
+@include desktop{
+    padding-bottom:1rem;
+    background-size:1.2rem;
 }
 
 }
@@ -229,6 +246,8 @@ line-height: 1.375rem;
 
     &__rowcontainer{
 
+       
+
         // @include desktop{
         // border-bottom:0.063rem solid $secondary-color-3;
         // display:flex;
@@ -294,7 +313,7 @@ border-radius:0.25rem;
 margin-bottom:1rem;
 margin-left:2.5rem;
 position:absolute;
-right:5rem;
+right:0rem;
 bottom:-3rem;
 
 
