--- a/src/components/PreviewCard/PreviewCard.scss
+++ b/src/components/PreviewCard/PreviewCard.scss
@@ -15,6 +15,7 @@
 display:flex;
 flex-direction: row;
 margin:1rem;
+align-items:center;
 
 
 @include tablet{
@@ -26,6 +27,7 @@ margin:1rem;
 &__columncontainer{
     display:flex;
     flex-direction: column;
+    max-width:8rem;
 
     @include tablet{
     max-width:15rem;
@@ -55,6 +57,7 @@ margin-left:1.5rem;
     font-weight:400;
     color:$primary-color-1;
     margin-left:1rem;
+    margin-top:0rem;
 
     @include tablet{
     font-size:14px;
@@ -66,6 +69,9 @@ margin-left:1.5rem;
 &__image{
 border-radius:4px;
 background-color: $secondary-color-3;
+height:4rem;
+width:6.5rem;
+
 
 @include tablet{
     width:12rem;
